fixed the carousel so that it's a react navbar. Fits the page well and is easy to format now. Also, changed the navbar so that it includes three icons without a search bar (doesn't collapse into a burger anymore)

--- a/src/components/carousel1/style.css
+++ b/src/components/carousel1/style.css
@@ -1,94 +1,99 @@
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+.parentDiv{
+    height: 100%;
+    margin: auto !important;
+    
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+.carousel{
+    height: 100%;
+    /* width: 60% !important; */
+    margin: auto !important;
+    text-align: center !important;
+    display: flex !important;
+    justify-content: center !important;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.rowCarousel{
+display: flex;
+width: 100%;
+text-align: center;
+margin: auto !important;
+
+
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+.thumbs-wrapper{
+    display: none;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.carousel-slider{
+    height: 100%; 
+    margin: auto !important;
+    text-align: center !important;
+    display: flex !important;
+    justify-content: center !important;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+.carousel-root{
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    box-sizing: border-box;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; */
+    
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.product-image{
+    max-width: 16vw;
+    max-height: 15vw;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-top: 2vh;
+    margin: 0 auto;
+    display: block;
+    margin-top: 2rem;
+    
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+
+.itemTitle{
+    color: white;
+    margin-top: 4rem;
+    /* margin-left: 4rem;
+     */
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.itemDescription{
+    color: white;
+    /* float: left;
+    clear: left; */
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+.mainDiv{
+    /* display: flex; */
+    /* justify-content: center; */
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.viewBtn{
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin-top: 0!important;
 }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.buttonView{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
 }
+
